# sbp-services

./: .dockerignore  .gitignore  Dockerfile  pyproject.toml  render.yaml
api/: app.py  config.py  models.py  requirements.txt  wsgi.py
api/routes/: auth.py  events.py  generator.py  musicians.py  projects.py  seasons.py
api/services/: converter.py  generator_service.py  migration_service.py  validator_service.py
config/: roster.yaml  tvk_defaults.yaml
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/hooks/: useAuth.ts
frontend/src/pages/: Dashboard.tsx  Events.tsx  Generator.tsx  Login.tsx  MusikerArea.tsx
frontend/src/styles/: index.css
frontend/src/types/: index.ts
scripts/: migrate_all.py  migrate_remote.py
src/dienstplan/: __main__.py  cli.py  config.py  dienst_calculator.py  individual_plan.py  roster.py
src/dienstplan/constraints/: base.py  tvk_rules.py  validator.py
src/dienstplan/excel_parser/: event_extractor.py  reader.py
src/dienstplan/models/: __init__.py  calendar.py  events.py  plan.py
src/dienstplan/output/: excel_writer.py  individual_writer.py  word_writer.py
src/dienstplan/pdf_parser/: dienstplan_reader.py
tests/: conftest.py  test_constraints.py  test_dienst_calculator.py  test_excel_parser.py  test_word_writer.py
web/: app.py  config.py  converter.py  generator.py  models.py  requirements.txt  routes_admin.py  routes_auth.py  routes_musiker.py  wsgi.py
web/static/: style.css
web/templates/: base.html  login.html  setup.html
(+6 files in other folders)
